--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "leaflet.markercluster": "^1.5.1",
     "mini-css-extract-plugin": "^1.6.2",
     "minimist": "^1.2.6",
+    "mocha": "^10.1.0",
     "papaparse": "^5.3.2",
     "postal": "^2.0.6",
     "style-loader": "^2.0.0",
